README.md rework and Tutorial upload

--- a/tutorials/Tutorial_1_Git_Workflow_Onboarding.ipynb
+++ b/tutorials/Tutorial_1_Git_Workflow_Onboarding.ipynb
@@ -89,7 +89,7 @@
    "id": "de225dee",
    "metadata": {},
    "source": [
-    "<img src=\"images/git_workflow.png\" alt=\"Alt text\" width=\"900\" />\n"
+    "<img src=\"images\\git_workflow.png\" alt=\"Alt text\" width=\"900\" />\n"
    ]
   },
   {
@@ -150,6 +150,16 @@
    "outputs": [],
    "source": [
     "!ls  # List the contents of the current directory for apple it might be ls -la"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c22c40ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mv original/file/path/filename destination/file/path  # moving files between folders"
    ]
   },
   {
