--- a/src/AugmentoAPICLient.ipynb
+++ b/src/AugmentoAPICLient.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2256,8 +2256,8 @@
     }
    ],
    "source": [
-    "from visual_utils import visualize_topic_hierarchy_3d\n",
-    "from augmento_client import AugmentoAPIClient\n",
+    "from utils.visual_utils import visualize_topic_hierarchy_3d\n",
+    "from utils.augmento_client import AugmentoAPIClient\n",
     "\n",
     "client = AugmentoAPIClient()\n",
     "categorized = client.get_summary()[\"Topics\"][\"categorized_topics\"]\n",
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2330,7 @@
     }
    ],
    "source": [
-    "from augmento_client import AugmentoAPIClient\n",
+    "from utils.augmento_client import AugmentoAPIClient\n",
     "\n",
     "client = AugmentoAPIClient()\n",
     "summary_path = client.summary_file\n",
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2423,7 @@
     }
    ],
    "source": [
-    "from augmento_audit import AugmentoClientAudit\n",
+    "from utils.augmento_audit import AugmentoClientAudit\n",
     "\n",
     "auditor = AugmentoClientAudit.from_client(df, client, source=\"twitter\", top_n_columns=5)\n"
    ]
